@@ -2103,6 +2103,7 @@ $user: User object
 'UserGetLanguageObject': Called when getting user's interface language object
 $user: User object
 &$code: Langauge code that will be used to create the object
+$context: RequestContext object
 
 'UserGetReservedNames': allows to modify $wgReservedUsernames at run time
 &$reservedUsernames: $wgReservedUsernames
