@@ -6,6 +6,7 @@ setting since version 1.2.0. If you have it on, turn it '''off''' if you can.
 == MediaWiki 1.19.4 ==
 * New preference type - 'api'. Preferences of this type are not shown on
   Special:Preferences, but are still available via the action=options API.
+* (bug 44010) Context is passed to UserGetLanguageObject.
 
 == MediaWiki 1.19.3 ==
 
